[package]
name = "bue-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenvy = "0.15.7"
hyper = { version = "1.6.0", features = ["full"] }
axum = "0.8.4"
mongodb = "3.2.4"
redis = { version = "0.32.5", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bson = "2.15.0"
futures = "0.3.31"
base64 = "0.22.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
